tests/ui/parser/missing-fn-issue-125446.stderr
error: missing `fn` for function definition
  --> $DIR/missing-fn-issue-125446.rs:1:1
   |
LL | whoops() {}
   | ^^^^^^
   |
help: add `fn` here to parse `whoops` as a function
   |
LL | fn whoops() {}
   | ++

error: aborting due to 1 previous error

