tests/ui/parser/missing-fn-issue-125446.rs
whoops() {}
//~^ ERROR missing `fn` for function definition
//~| HELP add `fn` here to parse `whoops` as a function

fn main() {
    whoops();
}
